# infra

./: .gitignore  .mailmap  .rustfmt.toml  .sops.yaml  Cargo.toml  README.md  bootstrap_debian.sh
.buildkite/: build-buildkite-hooks.sh  common.sh  package-buildkite-hooks.sh  package-zockervols.sh  package.sh  pipeline.yaml
.debian/: prerm
.docker/rust/: Dockerfile
buildkite-hooks/: Cargo.toml  README.md
buildkite-hooks/.debian/: postinst
buildkite-hooks/etc/buildkite-hooks/: buildkite-agent.cfg
buildkite-hooks/etc/systemd/system/buildkite-agent@.service.d/: local.conf  token.env
buildkite-hooks/scripts/: buildkite-hook-wrapper  wrapper.sh
buildkite-hooks/src/: cmd.rs  config.rs  env.rs  lib.rs
buildkite-hooks/src/container/: docker.rs  mod.rs
buildkite-hooks/test/: test-cmd-signal  test-cmd-timeout
ci/: Cargo.toml  README.md  cloud-init.yaml
ci/.debian/: postinst  prerm
ci/etc/buildkite-hooks/: buildkite-agent.cfg  secrets.env
ci/etc/buildkite-hooks/hooks/: environment
ci/etc/systemd/system/: docker-volume-prune.sh  docker-volume-prune.timer
ci/etc/systemd/system/buildkite-agent@.service.d/: local.conf
ci/linux/: bootstrap.sh
ci/linux/etc/apt/sources.list.d/: backports.list  sops.list
ci/linux/etc/buildkite-agent/: env.asc  secrets.asc
ci/linux/etc/buildkite-agent/hooks/: command  environment  post-checkout
ci/linux/etc/gce/: buildkite-agent.json
ci/linux/etc/systemd/system/: docker-volume-nuke.service  docker-volume-nuke.sh  docker-volume-nuke.timer  docker-volume-prune.service  zfs-prune.service  zfs-prune.sh  zfs-prune.timer
ci/linux/gce/: provision.sh
ci/macos/usr/local/etc/buildkite-agent/hooks/: environment
ci/provision/: README.md  cloud-init.yaml  create-gcp-instance
ci/src/: cmd.rs  config.rs  lib.rs  timeout.rs
ci/src/container/: docker.rs  mod.rs
ci/test/: test-cmd-timeout
docs/notes/: hardware.rst  isolation.rst
etc/apt/sources.list.d/: kata-containers.list  zockervols.list
etc/buildkite/: buildkite-agent.cfg
etc/buildkite-agent/: buildkite-agent.cfg  secrets.asc
etc/buildkite-agent/hooks/: command  environment  post-checkout  pre-checkout  pre-exit
etc/buildkite/hooks/: command  environment
etc/docker/: daemon.json
etc/gce/: cred.json.asc
etc/sudoers.d/: buildkite
etc/systemd/system/: docker-system-prune.service  docker-system-prune.timer  docker-volume-prune.service
etc/systemd/system/buildkite-agent@.service.d/: local.conf
etc/systemd/system/zockervols.service.d/: local.conf
gce/: .gitignore  provision.sh
linux/: bootstrap.sh
linux/etc/apt/: sources.list
linux/etc/apt/sources.list.d/: buildkite-agent.list  gce_sdk.list
linux/etc/buildkite-agent/hooks/: command  environment  post-checkout  pre-command  pre-exit
linux/etc/docker/: daemon.json
linux/gce/: provision.sh
registry/: README.md  backend.tf  ci-secrets.tf  devnet-miners.tf  devnet-run-validator.sh  devnet-telemetry.tf  devnet-updater.tf  devnet-validators.tf  dns.tf  kms-infra.tf  main.tf  monitoring.tf  prometheus.yaml  secrets.yaml
registry/devnet/: main.tf  miners.tf  monitoring.tf  prometheus.yaml  run-validator.sh  updater.tf  validators.tf
registry/ffnet/: README.md  boot.tf  grafana_alerts.md  grafana_alerts_dashboard.json  main.tf  miners.tf  monitoring.tf  prometheus.yaml  rpc-api.tf  validators.tf
registry/images/telemetry-backend/: Dockerfile  build.sh
registry/images/telemetry-frontend/: Dockerfile  build.sh  feed-address.patch
src/: api.rs  lib.rs  main.rs  noop.rs  server.rs  zfs.rs
src/container/: docker.rs
systemd/: zockervols.socket
zockervols/: Cargo.toml  README.md
zockervols/.debian/: postinst  prerm
zockervols/src/: lib.rs  main.rs  server.rs  zfs.rs
zockervols/systemd/: zockervols.service  zockervols.socket
(+4 files in other folders)
