[package]
name = "buildkite-hooks"
version = "0.0.0"
authors = ["Kim Altintop <kim@monadic.xyz>", "Monadic GmbH <team@monadic.xyz>"]
edition = "2018"

[dependencies]
failure = { version = "0.1", features = ["backtrace"] }
failure_derive = "0.1"
libc = "0.2"
log = "0.4"
paw = "1.0"
signal-hook = "0.1"
structopt = { version = "0.3", features = ["paw"] }
url = "2.1"
