[package]
name = "buildkite-hooks"
version = "0.0.0"
authors = ["Kim Altintop <kim@monadic.xyz>", "Monadic GmbH <team@monadic.xyz>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ci/oscoin"
description = """
Monadics Buildkite hooks implemented in a real programming language
"""
edition = "2018"

[dependencies]
env_logger = "0.7"
failure = { version = "0.1", features = ["backtrace"] }
failure_derive = "0.1"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
paw = "1.0"
regex = "1.3"
signal-hook = "0.1"
structopt = { version = "0.3", features = ["paw"] }
url = "2.1"
users = "0.9"

[package.metadata.deb]
maintainer = "Monadic GmbH <team@monadic.xyz>"
copyright = "2020 Kim Altintop, Monadic GmbH"
depends = "$auto, buildkite-agent, containerd.io, docker-ce-cli, kata-proxy, kata-runtime, kata-shim, jq, sops, zockervols"
priority = "optional"
maintainer-scripts = ".debian"
conf-files = ["/etc/buildkite-hooks/buildkite-agent.cfg"]
assets = [
    ["usr/bin/*", "usr/bin/", "755"],
    ["target/release/buildkite-command-hook", "var/lib/buildkite-hooks/bin/", "755"],
    ["target/release/buildkite-print-environment", "var/lib/buildkite-hooks/bin/", "755"],
    ["target/release/buildkite-pre-checkout-hook", "var/lib/buildkite-hooks/bin/", "755"],
    ["target/release/buildkite-pre-exit-hook", "var/lib/buildkite-hooks/bin/", "755"],

    ["etc/buildkite-hooks/buildkite-agent.cfg", "etc/buildkite-hooks/buildkite-agent.cfg", "644"],
    ["etc/buildkite-hooks/secrets.env", "etc/buildkite-hooks/secrets.env", "644"],
    ["etc/buildkite-hooks/hooks/environment", "etc/buildkite-hooks/hooks/environment", "644"],

    ["etc/systemd/system/*.service", "etc/systemd/system/", "644"],
    ["etc/systemd/system/*.timer", "etc/systemd/system/", "644"],
    ["etc/systemd/system/*.sh", "etc/systemd/system/", "744"],
    ["etc/systemd/system/buildkite-agent@.service.d/local.conf", "etc/systemd/system/buildkite-agent@.service.d/local.conf", "644"],
    ["usr/share/buildkite-hooks/*", "usr/share/buildkite-hooks/", "644"],
    ["etc/systemd/system/zockervols.service.d/local.conf", "etc/systemd/system/zockervols.service.d/local.conf", "644"],

    ["etc/sudoers.d/buildkite", "etc/sudoers.d/buildkite", "440"],
    ["etc/docker/daemon.json", "usr/share/buildkite-hooks/docker-daemon.json", "644"]
]
